[package]
name = "grs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grac = { git = "https://github.com/daxida/grac" }
grs = { git = "https://github.com/daxida/grs", features = ["serde"] }
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
